[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PyImbalReg"
version = "0.0.3"
description = "Pre-processing techniques for imbalanced datasets in regression"
readme = "README.md"
license = { text = "GPL-3.0" }
authors = [
    { name = "Vahid Asghari", email = "vd1371@gmail.com" }
]
keywords = [
    "imbalanced regression",
    "imbalanced data",
    "pre-processing",
    "data augmentation",
    "undersampling",
    "oversampling",
    "synthetic data",
    "regression",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20",
    "pandas>=1.3",
    "scipy>=1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "seaborn>=0.11",
]

[project.urls]
Homepage = "https://github.com/vd1371/PyImbalReg"
Repository = "https://github.com/vd1371/PyImbalReg"

[tool.setuptools.packages.find]
where = ["."]
include = ["PyImbalReg*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = "-v"
